--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -63,7 +63,8 @@ Unknown = ""
 Windows = ""
 
 [directory]
-style = "fg:#e3e5e5 bg:#769ff0"
+# style = "fg:#e3e5e5 bg:#769ff0"
+style = "fg:#090c0c bg:#769ff0"
 format = "[ $path ]($style)"
 truncation_length = 999
 truncation_symbol = "…/"
