--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -70,13 +70,16 @@ truncation_length = 999
 truncation_symbol = "…/"
 truncate_to_repo = true
 use_os_path_sep = false
-home_symbol = '󰋜 ~'
+###
+#home_symbol = " ~"
+home_symbol = " ~"
 # repo_root_style = "fg:#e3e5e5 bg:#769ff0"
 # read_only_style = '197'
 read_only = ' '
 
 [directory.substitutions]
-"Documents" = "󰈙 "
+###
+"Documents" = " "
 "Downloads" = " "
 "Music" = " "
 "Pictures" = " "
@@ -90,16 +93,19 @@ format = '[[ $symbol $branch ](fg:#769ff0 bg:#394260)]($style)'
 [git_status]
 style = "bg:#394260"
 format = '[[($all_status$ahead_behind )](fg:#769ff0 bg:#394260)]($style)'
-conflicted = '🏳'
-up_to_date = ' '
-untracked = ' '
-ahead = '⇡${count}'
-diverged = '⇕⇡${ahead_count}⇣${behind_count}'
-behind = '⇣${count}'
-stashed = ' '
+###
+conflicted = " "
+up_to_date = ' '
+untracked = ' '
+ahead = '+ ${count}'
+diverged = '+ ${ahead_count} - ${behind_count}'
+behind = '- 0;276;0c${count}'
+###
+stashed = ' '
 modified = ' '
 staged = '[++\($count\)](green)'
-renamed = '襁 '
+###
+renamed = ' '
 deleted = ' '
 
 [nodejs]
@@ -123,7 +129,9 @@ style = "bg:#212736"
 format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
 
 [python]
-symbol = "󰌠 "
+###
+#symbol = "󰌠 "
+symbol = " "
 pyenv_version_name = false
 python_binary = ['./venv/bin/python', 'python', 'python3', 'python2']
 style = "bg:#212736"
