--- a/tmux/lite/.tmux.conf
+++ b/tmux/lite/.tmux.conf
@@ -1,7 +1,8 @@
+# GNU-Screen compatible prefix
 # Add shortcut prefix: 'Ctrl+A'
 # unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set -g prefix2 C-a
+bind C-a send-prefix -2
 
 # Enable mouse mode
 set -g mouse on
