--- a/tmux/lite/.tmux.conf
+++ b/tmux/lite/.tmux.conf
@@ -1,5 +1,4 @@
-# GNU-Screen compatible prefix
-# Add shortcut prefix: 'Ctrl+A'
+# GNU-Screen compatible prefix 'Ctrl+A'
 # unbind C-b
 set -g prefix2 C-a
 bind C-a send-prefix -2
