--- a/tmux/lite/.tmux.conf
+++ b/tmux/lite/.tmux.conf
@@ -1,5 +1,4 @@
-# GNU-Screen compatible prefix 'Ctrl+A'
-# unbind C-b
+# Add GNU-Screen compatible prefix 'Ctrl+A'
 set -g prefix2 C-a
 bind C-a send-prefix -2
 
