--- a/tmux/lite/.tmux.conf
+++ b/tmux/lite/.tmux.conf
@@ -7,7 +7,20 @@ set -g mouse on
 
 # split current window horizontally
 bind - split-window -v
+
 # split current window vertically
 bind _ split-window -h
 
+# start windows numbering at 1
+set -g base-index 1
 
+# make pane numbering consistent with windows
+setw -g pane-base-index 1
+
+# rename window to reflect current program
+setw -g automatic-rename on
+# renumber windows when a window is closed
+set -g renumber-windows on
+
+# set terminal title
+set -g set-titles on
