--- a/tmux/lite/.tmux.conf
+++ b/tmux/lite/.tmux.conf
@@ -24,3 +24,8 @@ set -g renumber-windows on
 
 # set terminal title
 set -g set-titles on
+
+# toggle mouse mode
+bind m \
+  set -g mouse \;\
+  display-message 'Mouse: #{?mouse,on,off}'
