--- a/tmux/lite/.tmux.conf
+++ b/tmux/lite/.tmux.conf
@@ -10,6 +10,7 @@ bind - split-window -v
 
 # split current window vertically
 bind _ split-window -h
+bind | split-window -h
 
 # start windows numbering at 1
 set -g base-index 1
