--- a/tmux/lite/.tmux.conf
+++ b/tmux/lite/.tmux.conf
@@ -3,7 +3,7 @@ set -g prefix2 C-a
 bind C-a send-prefix -2
 
 # Enable mouse mode
-set -g mouse on
+set -g mouse off
 
 # split current window horizontally
 bind - split-window -v
