Add key bindings for entering copy mode

--- a/tmux/lite/.tmux.conf
+++ b/tmux/lite/.tmux.conf
@@ -31,3 +31,7 @@ set -g set-titles on
 bind m \
   set -g mouse \;\
   display-message 'Mouse: #{?mouse,on,off}'
+
+# PageUp and Ctrl+Up to enter in copy mode
+bind -n PageUp copy-mode -u
+bind -n C-Up copy-mode -u
