Modify mouse mode setting in .tmux.conf
Updated mouse mode configuration to force it off at startup.

--- a/tmux/lite/.tmux.conf
+++ b/tmux/lite/.tmux.conf
@@ -2,7 +2,7 @@
 set -g prefix2 C-a
 bind C-a send-prefix -2
 
-# Enable mouse mode
+# Force mouse mode on or off at startup
 set -g mouse off
 
 # split current window horizontally
